--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
-.container-fluid .hello {
-  color: greenyellow;
-  background: black;
-  border: 1px solid black;
-  font-family: "Nunito Sans", sans-serif; }
+main {
+  width: 100%;
+  height: 100vh; }
+
+header, footer {
+  height: 20%;
+  width: 100%; }
 
 .container {
   background-color: #16171A;
@@ -13,14 +15,48 @@
   font-family: "Nunito Sans", sans-serif; }
 
 header {
-  margin-bottom: 5px; }
+  margin-bottom: 15px; }
   header ul {
-    list-style: none; }
+    list-style: none;
+    margin-top: 0;
+    margin-bottom: 0; }
+  header ul li .dropdown-my {
+    display: none;
+    position: absolute;
+    top: 47px;
+    right: 177px; }
+  header ul li:hover .dropdown-my {
+    display: block; }
   header a {
     text-decoration: none;
     color: #FFFFFF; }
+  header .gpt {
+    position: absolute;
+    top: 0;
+    left: 7px; }
+  header .img_net {
+    position: absolute;
+    top: 16px;
+    left: 151px; }
 
-.price .item {
-  font-size: 34px; }
-.price .days {
-  margin-left: 18px; }
+.price {
+  margin-bottom: 35px; }
+  .price .item {
+    font-size: 34px;
+    font-weight: 600;
+    margin-right: 6px; }
+  .price img:first-of-type {
+    margin-right: 5px; }
+  .price p:nth-of-type(2) {
+    margin-left: 8px;
+    margin-right: 8px; }
+
+.charts {
+  width: 70%;
+  margin: auto; }
+
+.date {
+  margin-top: 100px; }
+
+footer .col-3 {
+  margin-bottom: 8px; }
