--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2,13 +2,14 @@
 
 //font-family: "Nunito Sans", sans-serif;
 
-.container-fluid {
-  .hello {
-    color: greenyellow;
-    background: black;
-    border: 1px solid black;
-    font-family: "Nunito Sans", sans-serif;
-  }
+main {
+  width: 100%;
+  height: 100vh;
+}
+
+header, footer {
+  height: 20%;
+  width: 100%;
 }
 
 .container {
@@ -20,21 +21,72 @@
 }
 
 header {
-  margin-bottom: 5px;
+  margin-bottom: 15px;
+
   ul {
     list-style: none;
+    margin-top: 0;
+    margin-bottom: 0;
   }
-  a{
+
+  ul li .dropdown-my {
+    display: none;
+    position: absolute;
+    top: 47px;
+    right: 177px;
+  }
+  ul li:hover .dropdown-my{
+    display: block;
+  }
+
+  a {
     text-decoration: none;
     color: #FFFFFF;
+  }
+
+  .gpt {
+    position: absolute;
+    top: 0;
+    left: 7px;
+  }
+
+  .img_net {
+    position: absolute;
+    top: 16px;
+    left: 151px;
   }
 }
 
 .price {
+  margin-bottom: 35px;
+
   .item {
     font-size: 34px;
+    font-weight: 600;
+    margin-right: 6px;
   }
-  .days {
-    margin-left: 18px;
+
+  img:first-of-type {
+    margin-right: 5px;
+  }
+
+  p:nth-of-type(2) {
+    margin-left: 8px;
+    margin-right:8px;
+  }
+}
+
+.charts {
+  width: 70%;
+  margin: auto;
+}
+
+.date {
+  margin-top: 100px;
+}
+
+footer {
+  .col-3 {
+    margin-bottom: 8px;
   }
 }
